--- a/yt_dlp_playlist_audio.ipynb
+++ b/yt_dlp_playlist_audio.ipynb
@@ -55,7 +55,7 @@
         "    from google.colab import drive\n",
         "    print(\"Google Colab detected. Using Google Drive.\")\n",
         "    is_colab = True\n",
-        "    #@markdown If you connect your Google Drive, you can save the final image of each run on your drive.\n",
+        "    #@markdown If you connect your Google Drive, you can save the final mp3 files of each run on your drive.\n",
         "    google_drive = True #@param {type:\"boolean\"}\n",
         "\n",
         "except:\n",
